vlib/v/checker/tests/multireturn_mix_err.vv
fn goo() (string, int) {
	return '', 100
}

fn foo() (string, int, bool) {
	return goo(), true
}
